fix(Select): Add remove horizontal scroll to Select dropdown

--- a/src/stories/select/Select.module.scss
+++ b/src/stories/select/Select.module.scss
@@ -22,6 +22,7 @@
 .options {
     max-height: var(--options-maxHeight, auto);
     overflow-y: auto;
+    overflow-x: hidden;
 
     position: absolute;
     top: 100%;
